--- a/addtask.html
+++ b/addtask.html
@@ -25,6 +25,7 @@
   <script defer src="./scripts/bootstrap.js"></script>
   <script defer src="./scripts/utils.js"></script>
   <script defer src="./scripts/addtask.js"></script>
+  <script defer src="./scripts/addtask-html.js"></script>
   <script defer src="./scripts/storage.js"></script>
 </head>
 
