--- a/board.html
+++ b/board.html
@@ -96,7 +96,7 @@
 
         <div class="bottom-left">
           <label class="font20 label" for="category">Category</label>
-          <div onclick="toggleCatgoryMenu()" class="category-container font20" id="category-container">
+          <div onclick="toggleCategoryMenu()" class="category-container font20" id="category-container">
             <div class="category-input cursor-p" id="category-input">
               <span>Select task category</span>
             </div>
