--- a/addtask.html
+++ b/addtask.html
@@ -1,4 +1,4 @@
-<!DOCTYPE text/html/javascript>
+<!DOCTYPE text/html/application/javascript>
 <html lang="en">
 
 <head>
@@ -16,7 +16,6 @@
   <meta name="theme-color" content="#ffffff" />
   <!-- FAVICON END -->
   <link rel="stylesheet" href="./styles/fonts.css">
-  <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="./styles/bootstrap.css">
   <link rel="stylesheet" href="./styles/taskstyle.css">
   <link rel="stylesheet" href="./styles/styleSidebar.css">
