--- a/board.html
+++ b/board.html
@@ -18,7 +18,6 @@
   <link rel="stylesheet" href="./styles/fonts.css" />
   <link rel="stylesheet" href="./styles/taskstyle.css" />
   <link rel="stylesheet" href="./styles/styleSidebar.css" />
-  <link rel="stylesheet" href="./styles/summary.css" />
   <link rel="stylesheet" href="./styles/animations.css" />
   <link rel="stylesheet" href="./styles/board.css" />
   <link rel="stylesheet" href="./styles/coloris.min.css" />
@@ -26,8 +25,8 @@
   <script defer src="./scripts/utils.js"></script>
   <script defer src="./scripts/boardTouch.js"></script>
   <script defer src="./scripts/board.js"></script>
-  <!-- <script defer src="./scripts/summary.js"></script> -->
   <script defer src="./scripts/sidebar.js"></script>
+  <script defer src="./scripts/addtask-html.js"></script>
   <script defer src="./scripts/addtask.js"></script>
   <script defer src="./scripts/animations.js"></script>
   <script defer src="./scripts/bootstrap.js"></script>
