--- a/addtask.html
+++ b/addtask.html
@@ -140,8 +140,8 @@
               <button type="button"><img src="./img/plus_icon.png"></button>
             </div>
           </div>
-          <div class="geneneratedSubtasks cursor-p font20" id="subtask-content">
-          </div>
+          <ul class="geneneratedSubtasks cursor-p font20 subtask-padding" id="subtask-content">
+          </ul>
 
           <div class="form-btn" id="form-btn-container">
             <button onclick="clearAll()" type="reset" class="font20 pad-18-10 clear-btn">Clear <svg
