outsourcing of HTML generating Code into new file: contactsHTML.js smallchanges of original code due to clean code

--- a/contacts.html
+++ b/contacts.html
@@ -217,6 +217,7 @@
   </div>
 
   <script src="./scripts/contacts.js"></script>
+  <script src="./scripts/contactsHTML.js"></script>
   <script src="./scripts/bootstrap.js"></script>
 </body>
 
