--- a/contacts.html
+++ b/contacts.html
@@ -100,11 +100,11 @@
         <img src="./img/create_contact_frame.svg" alt="no user photo" />
       </div>
       <form id="createContactForm" class="dialog__createRightForm" onsubmit="addNewContact(); return false;">
-        <input required minlength="1" type="text" placeholder="Name" class="dialog__createInput" id="dialog__createNameInput" />
-        <input required type="email" placeholder="Email" class="dialog__createInput" id="dialog__createEmailInput" />
+        <input aria-required="true" minlength="1" type="text" placeholder="Name" class="dialog__createInput" id="dialog__createNameInput" />
+        <input aria-required="true" type="email" placeholder="Email" class="dialog__createInput" id="dialog__createEmailInput" />
         <input type="number" placeholder="Phone" class="dialog__createInput" id="dialog__createPhoneInput" />
         <div class="dialog__createRightBtn">
-          <button type="button" class="custom-btn-white btn-hover" id="dialog__createDeleteBtn" onclick="cancelCreateContact()">
+          <button type="submit" class="custom-btn-white btn-hover" id="dialog__createDeleteBtn" onclick="cancelCreateContact()">
             Cancel X
           </button>
           <button type="submit" class="custom-btn btn-hover btn-save" id="dialog__createSaveBtn">
