small form validation changes

--- a/contacts.html
+++ b/contacts.html
@@ -102,7 +102,7 @@
       <form id="createContactForm" class="dialog__createRightForm" onsubmit="addNewContact(); return false;">
         <input aria-required="true" minlength="1" type="text" placeholder="Name" class="dialog__createInput" id="dialog__createNameInput" />
         <input aria-required="true" type="email" placeholder="Email" class="dialog__createInput" id="dialog__createEmailInput" />
-        <input type="number" placeholder="Phone" class="dialog__createInput" id="dialog__createPhoneInput" />
+        <input type="tel" placeholder="Phone" class="dialog__createInput" id="dialog__createPhoneInput" />
         <div class="dialog__createRightBtn">
           <button type="submit" class="custom-btn-white btn-hover" id="dialog__createDeleteBtn" onclick="cancelCreateContact()">
             Cancel X
