fixed summary count

--- a/summary.html
+++ b/summary.html
@@ -92,7 +92,7 @@
               class="task-feedback custom-border"
               onclick="redirect('board.html')"
             >
-              <div class="font-64" id="feedback-count">2</div>
+              <div class="font-64" id="feedback-count">0</div>
               <span class="font-20">Awaiting</span>
               <span class="font-20">Feedback</span>
             </div>
@@ -104,7 +104,7 @@
             <div class="urgent-left">
               <img src="./img/prio_urgent.svg" alt="urgent" />
               <div class="urgent">
-                <div class="font-64" id="urgent-count">1</div>
+                <div class="font-64" id="urgent-count">0</div>
                 <span class="font-16">Urgent</span>
               </div>
             </div>
@@ -125,7 +125,7 @@
               </svg>
             </div>
             <div class="urgent-right">
-              <span class="font-21" id="urgent-deadline">October 16, 2022</span>
+              <span class="font-21" id="urgent-deadline"></span>
               <span class="font-16 deadline-text">Upcoming Deadline</span>
             </div>
           </div>
@@ -138,7 +138,7 @@
             >
               <img id="pencil" src="./img/icon_pencil.svg" alt="pencil" />
               <div class="to-do-content">
-                <div class="font-61" id="todo-count">1</div>
+                <div class="font-61" id="todo-count">0</div>
                 <span class="font-20">To-do</span>
               </div>
             </div>
