--- a/addtask.html
+++ b/addtask.html
@@ -20,12 +20,15 @@
   <link rel="stylesheet" href="./styles/taskstyle.css">
   <link rel="stylesheet" href="./styles/styleSidebar.css">
   <link rel="stylesheet" href="./styles/coloris.min.css" />
+  <link rel="stylesheet" href="styles/contacts.css">
   <script defer src="./scripts/sidebar.js"></script>
   <script defer src="./scripts/bootstrap.js"></script>
   <script defer src="./scripts/utils.js"></script>
   <script defer src="./scripts/addtask.js"></script>
   <script defer src="./scripts/addtask-html.js"></script>
   <script defer src="./scripts/storage.js"></script>
+  <script defer src="./scripts/contacts.js"></script>
+  <script defer src="./scripts/contactsHTML.js"></script>
 </head>
 
 <body onload="includeHTML(); init()">
@@ -118,6 +121,7 @@
             <ul id="renderContacts">
             </ul>
           </div>
+          <div id="hiddenAssignedError"></div>
         </div>
 
         <div class="bottom-seperator">
