--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <script defer src="./scripts/bootstrap.js"></script>
     <script defer src="./scripts/storage.js"></script>
     <script defer src="./scripts/utils.js"></script>
+    <script defer src="./scripts/templateFunctions/login-template.js"></script>
     <script defer src="./scripts/login.js"></script>
     <link rel="stylesheet" href="./styles/fonts.css" />
     <link rel="stylesheet" href="./styles/index.css" />
