login type submit

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             >
           </div>
           <div class="login-btn-container">
-            <button class="signup-btn" onclick="login();">Log in</button>
+            <button class="signup-btn" type="submit">Log in</button>
             <button
               class="signup-btn guest-login-btn"
               type="button"
