deleted standard greeting name

--- a/summary.html
+++ b/summary.html
@@ -158,7 +158,7 @@
         </main>
         <div class="greeting">
           <span id="whichHour" class="font-47">Good morning,</span>
-          <span id="welcome-user" class="greeting-name">Guest</span>
+          <span id="welcome-user" class="greeting-name"></span>
         </div>
       </div>
     </div>
