--- a/board.html
+++ b/board.html
@@ -25,11 +25,11 @@
   <script defer src="./scripts/utils.js"></script>
   <script defer src="./scripts/boardTouch.js"></script>
   <script defer src="./scripts/addtask-html.js"></script>
+  <script defer src="./scripts/templateFunctions/addtask-template.js"></script>
   <script defer src="./scripts/addtask.js"></script>
   <script defer src="./scripts/templateFunctions/board-template.js"></script>
   <script defer src="./scripts/board.js"></script>
   <script defer src="./scripts/sidebar.js"></script>
-  <script defer src="./scripts/addtask-html.js"></script>
   <script defer src="./scripts/animations.js"></script>
   <script defer src="./scripts/bootstrap.js"></script>
 
