--- a/contacts.html
+++ b/contacts.html
@@ -39,10 +39,12 @@
   <link rel="stylesheet" href="./styles/fonts.css" />
   <link rel="stylesheet" href="./styles/contacts.css" />
   <link rel="stylesheet" href="./styles/styleSidebar.css" />
-  <script src="./scripts/sidebar.js"></script>
-  <script src="./scripts/authenticate.js"></script>
-  <script src="./scripts/storage.js"></script>
-  <script src="./scripts/utils.js"></script>
+  <script defer src="./scripts/templateFunctions/contacts-template.js"></script>
+  <script defer src="./scripts/contacts.js"></script>
+  <script defer src="./scripts/sidebar.js"></script>
+  <script defer src="./scripts/authenticate.js"></script>
+  <script defer src="./scripts/storage.js"></script>
+  <script defer src="./scripts/utils.js"></script>
   <link rel="icon" href="./img/logo_dark.png" />
   <title>Contacts</title>
 </head>
