contacts on addTask into a new js and documentation

--- a/addtask.html
+++ b/addtask.html
@@ -26,6 +26,7 @@
   <script defer src="./scripts/utils.js"></script>
   <script defer src="./scripts/addtask.js"></script>
   <script defer src="./scripts/templateFunctions/addtask-template.js"></script>
+  <script defer src="./scripts/addtask-contact.js"></script>
   <script defer src="./scripts/storage.js"></script>
   <script defer src="./scripts/contactsHTML.js"></script>
   <script defer src="scripts/authenticate.js"></script>
