--- a/board.html
+++ b/board.html
@@ -20,12 +20,14 @@
   <link rel="stylesheet" href="./styles/styleSidebar.css" />
   <link rel="stylesheet" href="./styles/animations.css" />
   <link rel="stylesheet" href="./styles/board.css" />
+  <link rel="stylesheet" href="./styles/contacts.css" />
   <link rel="stylesheet" href="./styles/coloris.min.css" />
   <script defer src="./scripts/storage.js"></script>
   <script defer src="./scripts/utils.js"></script>
   <script defer src="./scripts/boardTouch.js"></script>
   <script defer src="./scripts/templateFunctions/addtask-template.js"></script>
   <script defer src="./scripts/addtask.js"></script>
+  <script defer src="./scripts/addtask-contact.js"></script>
   <script defer src="./scripts/templateFunctions/board-template.js"></script>
   <script defer src="./scripts/board.js"></script>
   <script defer src="./scripts/sidebar.js"></script>
@@ -234,6 +236,47 @@
       </div>
     </div>
   </div>
+
+  <dialog class="resp-none" id="dialog__createContact">
+    <button class="btn-resp-x" onclick="cancelCreateContact()">
+      <img src="./img/responsive_close_X_white.svg" alt="close dialog window">
+    </button>
+    <div class="dialog__createLeftSide">
+      <img src="./img/logo_white.svg" alt="White Join Logo" />
+      <h2>Add contact</h2>
+      <span class="dialog__blue-line"></span>
+      <h4>Tasks are better with a team!</h3>
+    </div>
+    <div class="dialog__createRightSide">
+      <img src="./img/close.svg" alt="Close the Dialog Windows" id="dialog__createClose"
+        onclick="cancelCreateContact()" />
+      <div class="dialog__createRightImg">
+        <img src="./img/create_contact_frame.svg" alt="no user photo" />
+      </div>
+      <form id="createContactForm" class="dialog__createRightForm" onsubmit="addNewContact(event); return false;">
+        <input required minlength="1" type="text" placeholder="Name" class="dialog__createInput" id="dialog__createNameInput" />
+        <input required type="email" placeholder="Email" class="dialog__createInput" id="dialog__createEmailInput" />
+        <input type="number" placeholder="Phone" class="dialog__createInput" id="dialog__createPhoneInput" />
+        <div class="dialog__createRightBtn">
+          <button type="button" class="custom-btn-white btn-hover" id="dialog__createDeleteBtn" onclick="cancelCreateContact()">
+            Cancel X
+          </button>
+          <button type="submit" class="custom-btn btn-hover btn-save" id="dialog__createSaveBtn">
+            Save
+          </button>
+          <button type="submit" class="btn-resp-create custom-btn">
+            <span>Create Contact</span>
+            <img src="./img/icon_check.png" alt="check">
+          </button>
+        </div>
+      </form>
+    </div>
+  </dialog>
+
+  <div class="background-dialog d-none" onclick="closeDialog(); closeResponsiveOptions()">
+  </div>
+
+
 </body>
 
 </html>
