hover effekt but destroyed buttons again....

--- a/addtask.html
+++ b/addtask.html
@@ -144,7 +144,7 @@
               <button type="button"><img src="./img/plus_icon.png"></button>
             </div>
           </div>
-          <ul class="generatedSubtasks cursor-p font20 subtask-padding" id="subtask-content">
+          <ul class="generatedSubtasks cursor-p font20 ml-10" id="subtask-content">
           </ul>
 
           <div class="form-btn" id="form-btn-container">
