--- a/board.html
+++ b/board.html
@@ -156,14 +156,20 @@
           </ul>
 
           <div class="form-btn" id="form-btn-container">
-            <button onclick="clearAll()" type="reset" class="font20 pad-18-10 clear-btn">Clear <svg
+            <button onclick="clearAll()" type="reset" class="font20 pad-18-10 clear-btn" id="clear-btn">Clear <svg
                 xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
                 <path id="cancel-icon"
                   d="M12.0174 12.1705L17.2604 17.4135M6.77441 17.4135L12.0174 12.1705L6.77441 17.4135ZM17.2604 6.92749L12.0164 12.1705L17.2604 6.92749ZM12.0164 12.1705L6.77441 6.92749L12.0164 12.1705Z"
                   stroke="#2A3647" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
               </svg></button>
-            <button type="submit"
+            <button type="submit" id="create-btn"
               class="font20 pad-18-15 create-btn create-btn-web">Create Task <svg xmlns="http://www.w3.org/2000/svg"
+                width="25" height="25" viewBox="0 0 25 25" fill="none">
+                <path d="M4.0166 12.1704L10.0166 18.1704L20.0166 6.17041" stroke="white" stroke-width="2"
+                  stroke-linecap="round" stroke-linejoin="round" />
+              </svg></button>
+              <button type="submit" id="ok-btn"
+              class="font20 pad-18-15 create-btn display-none">Ok<svg xmlns="http://www.w3.org/2000/svg"
                 width="25" height="25" viewBox="0 0 25 25" fill="none">
                 <path d="M4.0166 12.1704L10.0166 18.1704L20.0166 6.17041" stroke="white" stroke-width="2"
                   stroke-linecap="round" stroke-linejoin="round" />
