--- a/board.html
+++ b/board.html
@@ -46,7 +46,7 @@
   <div class="modal-backdrop modal dNone">
     <form onsubmit="addTask(); return false" class="popUpBoardTask add-task-form-bord">
       <img src="./img/close.svg" alt="Close Add Task Form" class="boardTaskClose"
-        onclick="closeModal(document.querySelector('.modal'))">
+        onclick="closeModal(document.querySelector('.modal')); resetPrioButtons();">
       <button onclick="getAssignedContacts()" type="submit"
         class="display-none font20 pad-18-15 create-btn create-btn-responsive">Create<svg
           xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
