some refactoring - edit task has now a new javascript-file

--- a/board.html
+++ b/board.html
@@ -30,11 +30,10 @@
   <script defer src="./scripts/addtask-contact.js"></script>
   <script defer src="./scripts/templateFunctions/board-template.js"></script>
   <script defer src="./scripts/board.js"></script>
+  <script defer src="./scripts/board-edit-task.js"></script>
   <script defer src="./scripts/sidebar.js"></script>
   <script defer src="./scripts/animations.js"></script>
   <script defer src="./scripts/bootstrap.js"></script>
-
-
   <script defer type="text/javascript" src="./scripts/coloris.min.js"></script>
 
   <title>Board</title>
